--- a/Practicas/Desafio3/package.json
+++ b/Practicas/Desafio3/package.json
@@ -2,10 +2,11 @@
   "name": "desafio3",
   "version": "1.0.0",
   "description": "",
-  "main": "Desafio3.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
